# cf-uap-demo

./: Cargo.toml  wrangler.toml
src/: lib.rs  regexes.yaml
