[package]
name = "cf-uap-demo"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
serde_json = "1.0.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
uaparser = "0.6.0"
worker = { git = "https://github.com/cloudflare/workers-rs", rev = "c492bbc663a74139dade3de7aee1860af771a3a1" }
#worker = "0.0.12"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
